--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       <img class="img" src="images/bg-section-top-desktop-1.svg" alt="bg" />
       <div class="elements section-2">
         <div class="text elem-1">
-          <h1>Grow Togeter</h1>
+          <h1>Grow Together</h1>
           <p class="text-sections">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi
             reprehenderit recusandae atque nisi delectus optio ea beatae
@@ -89,7 +89,7 @@
           />
         </div>
         <div class="text elem-1">
-          <h1>Grow Togeter</h1>
+          <h1>Grow Together</h1>
           <p class="text-sections">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi
             reprehenderit recusandae atque nisi delectus optio ea beatae
@@ -103,7 +103,7 @@
     <section>
       <div class="elements section-2">
         <div class="text elem-1">
-          <h1>Grow Togeter</h1>
+          <h1>Grow Together</h1>
           <p class="text-sections">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi
             reprehenderit recusandae atque nisi delectus optio ea beatae
